infra/scenarios/azure_kubernetes_playground/manifests/gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workshop-gateway
  labels:
    app.kubernetes.io/name: workshop-gateway
    app.kubernetes.io/part-of: azure-kubernetes-playground
    workshop.ks6088ts.com/gateway-access: "true"
