infra/scenarios/azure_kubernetes_playground/manifests/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: workshop-gateway
  namespace: workshop-gateway
  labels:
    app.kubernetes.io/name: workshop-gateway
    app.kubernetes.io/part-of: azure-kubernetes-playground
spec:
  gatewayClassName: approuting-istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              workshop.ks6088ts.com/gateway-access: "true"
